--- a/css/style.css
+++ b/css/style.css
@@ -158,13 +158,13 @@ button {
 		background: url(../image/bg1.png) top 60px left 0px;
 		background-size: contain;
 		background-repeat: no-repeat;
-		transition: background 1.5s ease-in;
+		transition: background 1.5s linear;
 	}
 	.flex-item-2 {
 		background: url(../image/bg2.png) top 60px left 0px;
 		background-size: contain;
 		background-repeat: no-repeat;
-		transition: background 1.5s ease-in;
+		transition: background 1.5s linear;
 	}
 	.flex-item-3 {
 		background: url(../image/bg3.png) top 70px left 0px;
@@ -172,51 +172,43 @@ button {
 		background-repeat: no-repeat;
 		z-index: 2;
 		position: relative;
-		transition: background 1.5s ease-in;
+		transition: background 1.5s linear;
 	}
 	.flex-item-4 {
 		background: url(../image/bg4.png) top 70px left 0px;
 		background-size: contain;
 		background-repeat: no-repeat;
-		transition: background 1.5s ease-in;
+		transition: background 1.5s linear;
 	}
 	.flex-item-5 {
 		background: url(../image/bg5.png) top 40px left 0px;
 		background-size: contain;
 		background-repeat: no-repeat;
-		transition: background 1.5s ease-in;
+		transition: background 1.5s linear;
 	}
 	.flex-item-6 {
 		background: url(../image/bg6.png) top 40px left 0px;
 		background-size: contain;
 		background-repeat: no-repeat;
-		transition: background 1.5s ease-in;
+		transition: background 1.5s linear;
 	}
 	.flex-item-1:hover {
-		background: url(../image/bg1.png) 100%;
-		background-size: 550%;
+		background: #D4CDFF;
 	}
 	.flex-item-2:hover {
-		background: url(../image/bg2.png) 100%;
-		background-size: 450%;
+		background: #FFC6B5;
 	}
 	.flex-item-3:hover {
-		background: url(../image/bg3.png) 100% 100%;
-		background-size: 450%;
-		z-index: 2;
-		position: relative;
+		background: #BBFFD6;
 	}
 	.flex-item-4:hover {
-		background: url(../image/bg4.png) 100%;
-		background-size: 850%;
+		background: #B5E0FF;
 	}
 	.flex-item-5:hover {
-		background: url(../image/bg5.png) 100%;
-		background-size: 450%;
+		background: #BBC2FF;
 	}
 	.flex-item-6:hover {
-		background: url(../image/bg6.png) 100%;
-		background-size: 450%;
+		background: #FFF8BB;
 	}
 	.flex-item-1 img {
 		position: absolute;
@@ -297,10 +289,12 @@ button {
 	}
 	.special-slider .owl-nav.disabled + .owl-dots {
 		margin-top: 0;
+		top: -30px;
+		position: relative;
 	}
 	.special-slider .owl-stage-outer {
 		padding: 0 15px 25px 15px;
-		height: 180px !important;
+		height: 240px !important;
 	}
 	.special-slider .owl-item {
 		padding-top: 25px;
@@ -319,10 +313,10 @@ button {
 	}
 	.special-card {
 		position: relative;
-		min-height: 134px;
+		min-height: 162px;
 		background: #FFFFFF;
-		-webkit-box-shadow: 0px 6px 8px rgba(0, 0, 0, 0.14);
-		box-shadow: 0px 6px 8px rgba(0, 0, 0, 0.14);
+		-webkit-box-shadow: 0px 10px 26px rgba(0, 0, 0, 0.08);
+		box-shadow: 0px 10px 26px rgba(0, 0, 0, 0.08);
 		border-radius: 15px;
 		padding: 0 0 0 23px;
 		display: -webkit-box;
@@ -384,7 +378,7 @@ button {
 		right: -25px;
 	}
 	.slide-3 .special-card__image img {
-		height: 134px;
+		height: 154px;
 	}
 	.navbar-list {
 		margin: 0;
@@ -1734,5 +1728,40 @@ button {
 					form button:hover {
 						background: #EB5757;
 						color: #fff;
+					}
+					.spesh-page {
+						margin-bottom: 25px;
+					}
+					.spesh-page a {
+						color: #000;
+					}
+					.speshial-text {
+						font-family: 'Roboto-Regular';
+						font-style: normal;
+						font-weight: normal;
+						font-size: 15px;
+						line-height: 25px;
+						color: #000000;
+					}
+					.speshial-list-item {
+						position: relative;
+						margin-left: 13px;
+						margin-bottom: 15px;
+						font-family: 'Roboto-Regular';
+						font-style: normal;
+						font-weight: normal;
+						font-size: 15px;
+						line-height: 25px;
+						color: #000000;
+					}
+					.speshial-list-item:before {
+						content: "";
+						position: absolute;
+						left: -13px;
+						top: 10px;
+						width: 5px;
+						height: 5px;
+						border-radius: 50%;
+						background: #EB5757;
 					}
 				}
