--- a/css/style.css
+++ b/css/style.css
@@ -158,13 +158,11 @@ button {
 		background: url(../image/bg1.png) top 60px left 0px;
 		background-size: contain;
 		background-repeat: no-repeat;
-		transition: background .5s linear;
 	}
 	.flex-item-2 {
 		background: url(../image/bg2.png) top 60px left 0px;
 		background-size: contain;
 		background-repeat: no-repeat;
-		transition: background .5s linear;
 	}
 	.flex-item-3 {
 		background: url(../image/bg3.png) top 70px left 0px;
@@ -172,43 +170,45 @@ button {
 		background-repeat: no-repeat;
 		z-index: 2;
 		position: relative;
-		transition: background .5s linear;
 	}
 	.flex-item-4 {
 		background: url(../image/bg4.png) top 70px left 0px;
 		background-size: contain;
 		background-repeat: no-repeat;
-		transition: background .5s linear;
 	}
 	.flex-item-5 {
 		background: url(../image/bg5.png) top 40px left 0px;
 		background-size: contain;
 		background-repeat: no-repeat;
-		transition: background .5s linear;
 	}
 	.flex-item-6 {
 		background: url(../image/bg6.png) top 40px left 0px;
 		background-size: contain;
 		background-repeat: no-repeat;
-		transition: background .5s linear;
 	}
 	.flex-item-1:hover {
 		background: #D4CDFF;
+		transition: background .5s linear;
 	}
 	.flex-item-2:hover {
 		background: #FFC6B5;
+		transition: background .5s linear;
 	}
 	.flex-item-3:hover {
 		background: #BBFFD6;
+		transition: background .5s linear;
 	}
 	.flex-item-4:hover {
 		background: #B5E0FF;
+		transition: background .5s linear;
 	}
 	.flex-item-5:hover {
 		background: #BBC2FF;
+		transition: background .5s linear;
 	}
 	.flex-item-6:hover {
 		background: #FFF8BB;
+		transition: background .5s linear;
 	}
 	.flex-item-1 img {
 		position: absolute;
@@ -1763,5 +1763,8 @@ button {
 						height: 5px;
 						border-radius: 50%;
 						background: #EB5757;
+					}
+					.link {
+
 					}
 				}
